-- Updating EngineLoader to not use hacky constructor. New mini2DX logo