@@ -17,8 +17,6 @@ package leikr.loaders;
 
 import groovy.lang.Binding;
 import groovy.lang.GroovyClassLoader;
-import groovy.lang.GroovyCodeSource;
-import groovy.lang.GroovyShell;
 import groovy.lang.GroovySystem;
 import groovy.util.GroovyScriptEngine;
 import groovy.util.ResourceException;
@@ -48,7 +46,7 @@ public class EngineLoader {
     public static CustomProgramProperties cp;
 
     //Returns either a pre-compiled game Engine, an Engine compiled from sources, or null. Returning Null helps the EngineScreen return to the MenuScreen.
-    public static Engine getEngine() throws CompilationFailedException, IOException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, ClassNotFoundException, ResourceException, ScriptException {
+    public static Engine getEngine() throws CompilationFailedException, IOException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, ClassNotFoundException, ResourceException, ScriptException, NoSuchMethodException {
         cp = new CustomProgramProperties(GameRuntime.getGamePath());
         String rootPath = GameRuntime.getGamePath() + "/Code/";
         if (cp.USE_SCRIPT) {
@@ -63,7 +61,7 @@ public class EngineLoader {
         return getSourceEngine(rootPath);
     }
 
-    private static Engine getSourceEngine(String rootPath) throws CompilationFailedException, IOException, InstantiationException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+    private static Engine getSourceEngine(String rootPath) throws CompilationFailedException, IOException, InstantiationException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
         Arrays.asList(new File(rootPath).list()).stream()
                 .filter(x -> !x.equals("main.groovy") && !x.equals("Compiled"))
                 .forEach(path -> {
@@ -73,10 +71,10 @@ public class EngineLoader {
                         Logger.getLogger(EngineLoader.class.getName()).log(Level.SEVERE, null, ex);
                     }
                 });
-        return (Engine) gcl.parseClass(new File(rootPath+"main.groovy")).getDeclaredConstructors()[0].newInstance();//loads the game code  
+        return (Engine) gcl.parseClass(new File(rootPath+"main.groovy")).getDeclaredConstructor().newInstance();//loads the game code  
     }
 
-    private static Engine getCompiledEngine(String rootPath) throws MalformedURLException, ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, IOException {
+    private static Engine getCompiledEngine(String rootPath) throws MalformedURLException, ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, IOException, NoSuchMethodException {
         String COMPILED = rootPath + "Compiled/";
         gcl.addURL(new File(COMPILED).toURI().toURL());
         Arrays.asList(new File(COMPILED).list()).stream()
@@ -88,7 +86,7 @@ public class EngineLoader {
                         Logger.getLogger(EngineLoader.class.getName()).log(Level.SEVERE, null, ex);
                     }
                 });
-        return (Engine) gcl.loadClass(MenuScreen.getGameName()).getConstructors()[0].newInstance();
+        return (Engine) gcl.loadClass(MenuScreen.getGameName()).getDeclaredConstructor().newInstance();
     }
 
     private static void compileEngine(String rootPath) {
